# Multimodal-Edge-Node

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
demo-notebook-uv/: Multimodal_Edge_Node.ipynb
