[project]
name = "multimodal-edge-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate",
    "av>=17.0.1",
    "einops>=0.8.2",
    "gradio>=6.14.0",
    "hf-xet>=1.4.3",
    "huggingface-hub>=1.13.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "peft",
    "pillow>=12.2.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.33.1",
    "sentencepiece>=0.2.1",
    "spaces>=0.48.3",
    "timm>=1.0.26",
    "tokenizers>=0.22.2",
    "torch==2.10.0",
    "torchvision>=0.25.0",
    "transformers==5.7.0",
    "transformers-stream-generator>=0.0.5",
]

[tool.uv.sources]
accelerate = { git = "https://github.com/huggingface/accelerate.git" }
peft = { git = "https://github.com/huggingface/peft.git" }
